--- a/template/memcp.htm
+++ b/template/memcp.htm
@@ -1,39 +1,79 @@
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+
 <form method="post" autocomplete="off" action="home.php?mod=spacecp&ac=plugin&id=medalwear:memcp&pluginop=wear">
     <input type="hidden" name="formhash" value="{FORMHASH}" />
-    勋章列表:<br>
-    <select id="medalSelect" onchange="changeSelect()" multiple size=20>
-	<!--{loop $displayMedals $medal}-->
-	    <!--{if $medal[have]}--> <!-- && !$medal[expired]-->
-                <option value="$medal[medalid]">$medal[name]</option>
-        <!--{/if}-->
-	<!--{/loop}-->
-	</select><br>
+
+	<div class="divide-y-2 divide-opacity-20 divide-black">
+	可选勋章:<br>
+		<div class="grid grid-cols-6 gap-3 p-4" id="memberMedals">
+			<!--{loop $displayMedals $medal}-->
+			<!--{if $medal[have]}-->
+			<!--{if !$medal[wearing]}-->
+			<div class="ring-2 rounded-md bg-opacity-30 bg-blue-200" value="$medal[medalid]">
+				<div class="flex-none flex justify-center items-center font-semibold">
+	    			<img class="p-3" src="{STATICURL}/image/common/$medal['image']" />
+	        		<span class="p-1">$medal[name]</span>
+	    		</div>
+	    	</div>
+	    	<!--{/if}-->
+			<!--{/if}-->
+			<!--{/loop}-->
+	  	</div>
+	佩戴勋章:<br>
+		<div class="grid grid-cols-6 gap-3 p-4" id="wearingMedals">
+			<!--{loop $displayMedals $medal}-->
+			<!--{if $medal[have]}-->
+			<!--{if $medal[wearing]}-->
+			<div class="ring-2 rounded-md bg-opacity-30 bg-blue-200" value="$medal[medalid]">
+				<div class="flex-none flex justify-center items-center font-semibold">
+	    			<img class="p-3" src="{STATICURL}/image/common/$medal['image']" />
+	        		<span class="p-1">$medal[name]</span>
+	    		</div>
+	    	</div>
+	    	<!--{/if}-->
+			<!--{/if}-->
+			<!--{/loop}-->
+	  	</div>
+	</div>
 	<input type="hidden" name="medalIds" id="medalIds" value="" /><br>
-	(按住Ctrl以选择多个)<br>
-    <button type="submit" name="wearmedals" class="pn vm" value="yes" ><span>佩戴选中的勋章</span></button>
+
+	<div class="p-5 flex items-center justify-center">
+		<button type="submit" name="wearmedals" class="w-1/3 h-8 ring-2 rounded-2xl bg-opacity-40 bg-blue-300" value="yes" >
+			<span>佩戴选中的勋章</span>
+		</button>
+	</div>
 </form>
+
 <script>
-wearingMedalIds = [$memberWearingMedalIdsStr];
-console.log(wearingMedalIds);
-var selectBox=document.getElementById("medalSelect");
-for(var i=0;i<selectBox.options.length;i++){
-	console.log(selectBox.options[i].value);
-	if(wearingMedalIds.includes(parseInt(selectBox.options[i].value))){
-		selectBox.options[i].selected=true;
-	}
-}
-changeSelect();
-function changeSelect(){
-	var medalSelectedIds=[];
-	var selectBox=document.getElementById("medalSelect");
-	for(var i=0;i<selectBox.options.length;i++){
-		if(selectBox.options[i].selected){
-			medalSelectedIds.push(selectBox.options[i].value);
-		}
-	}
-	console.log(medalSelectedIds);
-	medalIds=document.getElementById("medalIds");
-	medalIds.value=medalSelectedIds;
+let memberMedalsSelection  = document.getElementById("memberMedals");
+let wearingMedalsSelection = document.getElementById("wearingMedals");
+
+new Sortable(memberMedalsSelection, {
+  group: "shared",
+  sort:false,
+  animation: 150,
+  onEnd: function(){
+  	updateSelectedMedals()
+  }
+});
+new Sortable(wearingMedalsSelection, {
+  group: "shared",
+  animation: 150,
+  onEnd: function(){
+  	updateSelectedMedals()
+  }
+});
+
+function updateSelectedMedals(){
+	wearingMedalIds = [];
+	children = wearingMedalsSelection.children;
+	medalIds = document.getElementById("medalIds");
+	for(i=0; i<children.length; i++)
+		wearingMedalIds.push(children[i].getAttribute("value"));
+	medalIds.value = wearingMedalIds;
 	medalIds.value=medalIds.value.replace(RegExp(",","g"),"`");
 }
+
+updateSelectedMedals();
 </script>
