更换CDN;减少性能消耗

--- a/template/memcp.htm
+++ b/template/memcp.htm
@@ -1,5 +1,5 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
-<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
 <form method="post" autocomplete="off" action="home.php?mod=spacecp&ac=plugin&id=medalwear:memcp&pluginop=wear">
     <input type="hidden" name="formhash" value="{FORMHASH}" />
