--- a/template/memcp.htm
+++ b/template/memcp.htm
@@ -22,7 +22,7 @@
 	  	</div>
 	佩戴勋章:<br>
 		<div class="grid grid-cols-6 gap-3 p-4" id="wearingMedals">
-			<!--{loop $displayMedals $medal}-->
+			<!--{loop $memberWearingMedals $medal}-->
 			<!--{if $medal[have]}-->
 			<!--{if $medal[wearing]}-->
 			<div class="ring-2 rounded-md bg-opacity-30 bg-blue-200" value="$medal[medalid]">
@@ -37,7 +37,7 @@
 	  	</div>
 	</div>
 	<input type="hidden" name="medalIds" id="medalIds" value="" /><br>
-
+$str
 	<div class="p-5 flex items-center justify-center">
 		<button type="submit" name="wearmedals" class="w-1/3 h-8 ring-2 rounded-2xl bg-opacity-40 bg-blue-300" value="yes" >
 			<span>佩戴选中的勋章</span>
