--- a/template/memcp.htm
+++ b/template/memcp.htm
@@ -1,10 +1,9 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sortablejs@1.14.0/Sortable.min.js"></script>
 
 <form method="post" autocomplete="off" action="home.php?mod=spacecp&ac=plugin&id=medalwear:memcp&pluginop=wear">
-    <input type="hidden" name="formhash" value="{FORMHASH}" />
-
+  <input type="hidden" name="formhash" value="{FORMHASH}" />
 	<div class="divide-y-2 divide-opacity-20 divide-black">
-	可选勋章:<br>
+	  <span class="font-bold text-lg">未佩戴勋章</span><br>
 		<div class="grid grid-cols-6 gap-3 p-4" id="memberMedals">
 			<!--{loop $displayMedals $medal}-->
 			<!--{if $medal[have]}-->
@@ -19,7 +18,9 @@
 			<!--{/if}-->
 			<!--{/loop}-->
 	  	</div>
-	佩戴勋章:<br>
+  </div>
+  <div class="divide-y-2 divide-opacity-20 divide-black">
+	  <span class="font-bold text-lg">已佩戴勋章</span><br>
 		<div class="grid grid-cols-6 gap-3 p-4" id="wearingMedals">
 			<!--{loop $memberWearingMedals $medal}-->
 			<!--{if $medal[have]}-->
@@ -36,7 +37,7 @@
 	  	</div>
 	</div>
 	<input type="hidden" name="medalIds" id="medalIds" value="" /><br>
-$str
+  <font color='#aaa'>拖动来佩戴/卸下/排序勋章</font>
 	<div class="p-5 flex items-center justify-center">
 		<button type="submit" name="wearmedals" class="w-1/3 h-8 ring-2 rounded-2xl bg-opacity-40 bg-blue-300" value="yes" >
 			<span>佩戴选中的勋章</span>
@@ -78,7 +79,7 @@ updateSelectedMedals();
 </script>
 
 <style type="text/css">
-	/*
+/*
 ! tailwindcss v3.0.7 | MIT License | https://tailwindcss.com
 */
 
@@ -504,6 +505,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 *, ::before, ::after {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
@@ -516,12 +525,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 0 #0000;
 }
 
+.visible {
+  visibility: visible;
+}
+
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
+}
+
+.contents {
+  display: contents;
 }
 
 .hidden {
@@ -538,6 +563,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-none {
   flex: none;
+}
+
+.border-collapse {
+  border-collapse: collapse;
+}
+
+.transform {
+  transform: var(--tw-transform);
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-6 {
@@ -579,6 +616,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 1rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
@@ -613,8 +654,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 1.25rem;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
 .font-semibold {
   font-weight: 600;
+}
+
+.underline {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+.outline {
+  outline-style: solid;
 }
 
 .ring-2 {
